--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
-  "name": "editorjs-content-preact",
+  "name": "editorjs-content-react",
   "version": "1.0.0",
-  "description": "Module to parse content blocks from EditorJS format to Preact components",
+  "description": "Module to parse content blocks from EditorJS format to React components",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/narcitymedia/editorjs-content-preact.git"
+    "url": "git+https://github.com/narcitymedia/editorjs-content-react.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/narcitymedia/editorjs-content-preact/issues"
+    "url": "https://github.com/narcitymedia/editorjs-content-react/issues"
   },
-  "homepage": "https://github.com/narcitymedia/editorjs-content-preact#readme"
+  "homepage": "https://github.com/narcitymedia/editorjs-content-react#readme",
+  "devDependencies": {
+    "prettier": "^2.2.1",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.1.3"
+  },
+  "files": ["lib/**/*"]
 }
