--- a/package.json
+++ b/package.json
@@ -21,10 +21,16 @@
   },
   "homepage": "https://github.com/narcitymedia/editorjs-content-react#readme",
   "devDependencies": {
+    "@types/react": "^17.0.0",
     "prettier": "^2.2.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.1.3"
   },
-  "files": ["lib/**/*"]
+  "files": [
+    "lib/**/*"
+  ],
+  "dependencies": {
+    "react": "^17.0.1"
+  }
 }
