--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "jsx": "react",
         "target": "es5",
         "declaration": true,
         "outDir": "./lib",
@@ -10,7 +11,8 @@
             "esnext"
         ],
         "forceConsistentCasingInFileNames": true,
-        "module": "esnext"
+        "module": "esnext",
+        "moduleResolution": "Node"
     },
     "include": [
         "src"
