--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "module": "lib/index.js",
   "description": "Module to parse content blocks from EditorJS format to React components",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json"
@@ -21,8 +21,13 @@
   },
   "homepage": "https://github.com/narcitymedia/editorjs-content-react#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.20",
     "@types/react": "^17.0.0",
+    "@types/react-test-renderer": "^17.0.0",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "react-test-renderer": "^16.14.0",
+    "ts-jest": "^26.4.4",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.1.3"
@@ -31,6 +36,39 @@
     "lib/**/*"
   ],
   "dependencies": {
+    "@testing-library/react": "^11.2.3",
     "react": "^17.0.1"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testMatch": [
+      "**/*.(test|spec).(ts|tsx)"
+    ],
+    "globals": {
+      "ts-jest": {
+        "babelConfig": true,
+        "tsConfig": "jest.tsconfig.json"
+      }
+    },
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "text",
+      "text-summary"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/mocks.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/mocks.js"
+    }
   }
 }
