--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.1.3"
   },
+  "files": [
+    "lib/**/*"
+  ],
   "dependencies": {
     "@testing-library/react": "^11.2.3",
     "react": "^17.0.1"
